[package]
name = "rust-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
walkdir = "2.4.0"
handlebars = "5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.3"
finalfusion = "0.18.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


